--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,7 @@
     },
     "cmake.configureOnOpen": false,
     "C_Cpp.autocomplete": "disabled",
-    "C_Cpp.errorSquiggles": "enabled",
+    "C_Cpp.errorSquiggles": "disabled",
     "workbench.editorAssociations": {
         "*.md": "vscode.markdown.preview.editor"
     },
